@@ -1,6 +1,7 @@
 /*
 //
 //  Copyright 1997-2009 Torsten Rohlfing
+//
 //  Copyright 2004-2010 SRI International
 //
 //  This file is part of the Computational Morphometry Toolkit.
@@ -369,28 +370,36 @@ main( int argc, char* argv[] )
       for ( std::vector<int>::const_iterator itDOF = NumberDOFs.begin(); itDOF != NumberDOFs.end(); ++itDOF )
 	{
 	functional->SetXformNumberDOFs( *itDOF );
-	
-	// do we have a normal subgroup?
-	if ( NormalGroupFirstN )
+
+	try
 	  {
-	  // yes: first run normal group by itself
-	  cmtk::StdErr << "Running normal subgroup...\n";
-	  functional->SetForceZeroSum( ForceZeroSum );
-	  functional->SetActiveImagesFromTo( 0, NormalGroupFirstN );
-	  functional->SetActiveXformsFromTo( 0, NormalGroupFirstN );
-	  optimizer.Optimize( v, Exploration * templateGrid->GetMinDelta(), Accuracy * templateGrid->GetMinDelta() );
-	  
-	  // second: run abnormal group, but keep using normal group's data for reference
-	  cmtk::StdErr << "Running diseased subgroup...\n";
-	  functional->SetForceZeroSum( false ); // no point here
-	  functional->SetActiveImagesFromTo( 0, imageListOriginal.size() );
-	  functional->SetActiveXformsFromTo( NormalGroupFirstN, imageListOriginal.size() );
-	  optimizer.Optimize( v, Exploration * templateGrid->GetMinDelta(), Accuracy * templateGrid->GetMinDelta() );
+	  // do we have a normal subgroup?
+	  if ( NormalGroupFirstN )
+	    {
+	    // yes: first run normal group by itself
+	    cmtk::StdErr << "Running normal subgroup...\n";
+	    functional->SetForceZeroSum( ForceZeroSum );
+	    functional->SetActiveImagesFromTo( 0, NormalGroupFirstN );
+	    functional->SetActiveXformsFromTo( 0, NormalGroupFirstN );
+	    optimizer.Optimize( v, Exploration * templateGrid->GetMinDelta(), Accuracy * templateGrid->GetMinDelta() );
+	    
+	    // second: run abnormal group, but keep using normal group's data for reference
+	    cmtk::StdErr << "Running diseased subgroup...\n";
+	    functional->SetForceZeroSum( false ); // no point here
+	    functional->SetActiveImagesFromTo( 0, imageListOriginal.size() );
+	    functional->SetActiveXformsFromTo( NormalGroupFirstN, imageListOriginal.size() );
+	    optimizer.Optimize( v, Exploration * templateGrid->GetMinDelta(), Accuracy * templateGrid->GetMinDelta() );
+	    }
+	  else
+	    {
+	    optimizer.Optimize( v, Exploration * templateGrid->GetMinDelta(), Accuracy * templateGrid->GetMinDelta() );
+	    }
 	  }
-	else
+	catch ( cmtk::GroupwiseRegistrationFunctionalBase::BadXform )
 	  {
-	  optimizer.Optimize( v, Exploration * templateGrid->GetMinDelta(), Accuracy * templateGrid->GetMinDelta() );
-	  }
+	  cmtk::StdErr << "FAILED: at least one image has too few pixels in the template area.\n";
+	  return 1;
+	  }	
 	}
       }
     }
